# vara_dex_sails

./: .gitignore
factory_vara_dex/: Cargo.toml
factory_vara_dex/app/: Cargo.toml
factory_vara_dex/app/src/: lib.rs
factory_vara_dex/app/src/clients/: mod.rs
factory_vara_dex/app/src/services/: factory_service.rs  mod.rs
factory_vara_dex/app/src/states/: factory_state.rs  mod.rs
factory_vara_dex/wasm/: Cargo.toml  build.rs  factory_vara_dex.idl
factory_vara_dex/wasm/src/: lib.rs
lp_vara_dex/: Cargo.toml
lp_vara_dex/app/: Cargo.toml
lp_vara_dex/app/src/: lib.rs
lp_vara_dex/app/src/clients/: factory_vara_dex_client.rs  mod.rs
lp_vara_dex/app/src/services/: lp_service.rs  mod.rs
lp_vara_dex/app/src/states/: lp_state.rs  mod.rs
lp_vara_dex/wasm/: Cargo.toml  build.rs  lp_vara_dex.idl  lp_vara_dex_client.rs
lp_vara_dex/wasm/src/: lib.rs
router_vara_dex/: Cargo.toml
router_vara_dex/app/: Cargo.toml
router_vara_dex/app/src/: lib.rs
router_vara_dex/app/src/clients/: extended_new_vft.rs  mod.rs
router_vara_dex/app/src/services/: mod.rs  router_service.rs
router_vara_dex/app/src/states/: mod.rs  router_state.rs
router_vara_dex/wasm/: Cargo.toml  build.rs  router_vara_dex.idl  router_vara_dex_client.rs
router_vara_dex/wasm/src/: lib.rs
wvara/app/: Cargo.toml
wvara/app/src/: Cargo.toml  lib.rs  mod.rs
wvara/app/src/services/: mod.rs
wvara/app/src/services/wvara_ft/: funcs.rs
wvara/wasm/: .binpath  Cargo.toml  build.rs  wvara_vft.idl
wvara/wasm/src/: lib.rs
